# cppgamedev

./: CMakeLists.txt  README.md
src/gameLayer/: assetManager.cpp  assetManager.h  blocks.h  gameMain.cpp  gameMap.cpp  gameMap.h  helpers.cpp  helpers.h  randomStuff.cpp  randomStuff.h  worldGenerator.cpp  worldGenerator.h
src/platform/: main.cpp
